Continue work; page styling

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -332,4 +332,27 @@
       margin-left: $pad-large;
     }
   }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+  }
+
+  &__footer-text {
+    font-size: $x-small;
+
+    display: flex;
+    align-items: center;
+
+    a {
+      color: $core-vibrant-blue;
+      font-weight: $bold;
+      text-decoration: none;
+    }
+    img {
+      height: 12px;
+      width: 12px;
+      padding-left: $pad-xsmall;
+    }
+  }
 }
