--- a/frontend/styles/var/colors.scss
+++ b/frontend/styles/var/colors.scss
@@ -8,6 +8,7 @@ $core-white: #ffffff;
 $core-dark-blue-grey: #506e92;
 
 // UI
+$ui-fleet-black-75: #515774;
 $ui-fleet-black-50: #8b8fa2;
 $ui-fleet-black-25: #c5c7d1;
 $ui-fleet-blue-15: #e2e4ea;
