--- a/frontend/pages/Homepage/components/InfoCard/_styles.scss
+++ b/frontend/pages/Homepage/components/InfoCard/_styles.scss
@@ -16,10 +16,18 @@
     }
   }
 
+  &__section-title-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
   &__section-title {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-right: 12px;
 
     span {
       background-color: $core-vibrant-blue;
@@ -32,6 +40,12 @@
     }
   }
 
+  &__section-title-detail {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   &__action-button {
     display: flex;
     align-items: center;
@@ -39,6 +53,9 @@
     color: $core-vibrant-blue;
     font-weight: $bold;
     text-decoration: none !important;
+  }
+  &__action-button-text {
+    text-align: right;
   }
 
   #link-arrow {
