show tags in query library, add ability to filter by tags

--- a/website/assets/styles/pages/query-detail.less
+++ b/website/assets/styles/pages/query-detail.less
@@ -27,6 +27,15 @@
     border-color: #E2E4EA;
   }
 
+  [purpose="query-tag"] {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    padding: 4px 8px;
+    border-radius: 20px;
+    background-color: #DBE3E5;
+  }
+
   [purpose='remediation'] {
     overflow-wrap: break-word;
     word-wrap: break-word;
