fix lint errors

--- a/website/assets/styles/pages/query-detail.less
+++ b/website/assets/styles/pages/query-detail.less
@@ -27,7 +27,7 @@
     border-color: #E2E4EA;
   }
 
-  [purpose="query-tag"] {
+  [purpose='query-tag'] {
     font-size: 14px;
     font-weight: 700;
     line-height: 20px;
