--- a/website/assets/styles/pages/query-library.less
+++ b/website/assets/styles/pages/query-library.less
@@ -36,7 +36,7 @@
     }
   }
 
-  [purpose="query-tag"] {
+  [purpose='query-tag'] {
     font-size: 14px;
     font-weight: 700;
     line-height: 20px;
@@ -45,7 +45,7 @@
     background-color: #DBE3E5;
   }
 
-  [purpose="selected-tag"] {
+  [purpose='selected-tag'] {
     background: #F1F0FF;
     border: 1px solid #D9D9FE;
     box-sizing: border-box;
