--- a/website/assets/styles/pages/query-library.less
+++ b/website/assets/styles/pages/query-library.less
@@ -289,6 +289,11 @@
       margin-bottom: 0px;
     }
 
+    [purpose='selected-tag'] {
+      margin-left: 45px;
+      margin-right: 45px;
+    }
+
     .results {
       margin-top: 16px;
     }
