--- a/website/views/pages/query-library.ejs
+++ b/website/views/pages/query-library.ejs
@@ -154,8 +154,7 @@
         <h3 class="mb-3">Contributors</h3>
         <p><strong>Want to add your own query?</strong> Please submit a pull request
           <a href="https://github.com/fleetdm/fleet/edit/main/docs/01-Using-Fleet/standard-query-library/standard-query-library.yml">
-            over on GitHub
-          </a>.
+            over on GitHub</a>.
         </p>
       </div>
     </div>
