--- a/website/views/pages/query-library.ejs
+++ b/website/views/pages/query-library.ejs
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="results">
-        <div class="row justify-content-center">
+        <div style="min-height: 0px;" class="row justify-content-center">
           <div purpose="selected-tag" class="mb-3" v-if="selectedTag">
             <strong>Showing {{ selectedKind === 'query' ? 'informational queries' : selectedKind === 'policy' ? 'policies' : 'all queries'}} with the "{{selectedTag}}" label.<span style="color: #FF5C83; cursor: pointer;" class="fa fa-times-circle pl-2" @click="clickSelectTag('')"></span></strong>
           </div>
@@ -105,8 +105,8 @@
                   <div class="col-12">
                     <div class="d-block d-sm-flex flex-wrap">
                       <h5 class="card-title m-0 mb-1 mr-sm-2">{{query.name}}</h5>
-                      <div class="my-2 my-sm-0">
-                        <span class="mr-2" purpose="query-tag" v-for="tag in query.tags" @click.stop="clickSelectTag(tag)">{{tag}}</span>
+                      <div class="my-2 my-sm-0 flex-wrap">
+                        <span class="mr-2 mb-1 text-nowrap d-inline-block" purpose="query-tag" v-for="tag in query.tags" @click.stop="clickSelectTag(tag)">{{tag}}</span>
                       </div>
                     </div>
                   </div>
