--- a/website/assets/styles/pages/query-detail.less
+++ b/website/assets/styles/pages/query-detail.less
@@ -32,7 +32,7 @@
     font-weight: 700;
     padding: 4px 8px;
     border-radius: 20px;
-    background-color: #DBE3E5;
+    background-color: #E2E4EA;
   }
 
   [purpose='remediation'] {
