--- a/website/views/pages/query-library.ejs
+++ b/website/views/pages/query-library.ejs
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="results">
-        <div purpose="selected-tag" class="mb-3" v-if="selectedTag">
+        <div purpose="selected-tag" v-if="selectedTag">
           <p>Showing {{ selectedKind === 'query' ? 'informational queries' : selectedKind === 'policy' ? 'policies' : 'all queries'}} for <span purpose="query-tag" class="d-inline-block" style="cursor: pointer;" @click="clickSelectTag('')">{{selectedTag}}<span style="color: #8b8fa2;" class="fa fa-times-circle pl-2"></span></span></p>
         </div>
         <div class="category__informational">
@@ -121,7 +121,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-3 col-md-auto">
+                  <div class="col-sm-3 col-md-auto align-self-start">
                     <div class="text-sm-right m-0">
                       <img class="d-inline-flex mr-1 mr-sm-0 ml-sm-1 ml-md-2 logo"
                         src="/images/os-macos-black-16x16@2x.png" alt="macOS"
