updated analytics snippet

--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -32,12 +32,11 @@
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-182153798-1');</script>
     <%/* Snitcher analytics code */%>
     <script>
-        !function(s,n,i,t,c,h){s.SnitchObject=i;s[i]||(s[i]=function(){
-        (s[i].q=s[i].q||[]).push(arguments)});s[i].l=+new Date;c=n.createElement(t);
-        h=n.getElementsByTagName(t)[0];c.src='//snid.snitcher.com/8416878.js';
-        h.parentNode.insertBefore(c,h)}(window,document,'snid','script');
-
-        snid('verify', '8416878');
+      !function(i,s,o,g,r,a,m){i.Ip2cObject=o;i[o]||(i[o]=function(){
+      (i[o].q=i[o].q||[]).push(arguments)});i[o].l=+new Date;r=s.createElement(g);
+      a=s.getElementsByTagName(g)[0];r.src='//reveal.ip2c.net/8416878.js';
+      a.parentNode.insertBefore(r,a)}(window,document,'ip2c','script');
+      ip2c('verify', '8416878');
     </script>
     <% }
     /* Otherwise, any such scripts are excluded, and we instead inject a
