--- a/frontend/pages/policies/PolicyPage/components/PolicyForm/_styles.scss
+++ b/frontend/pages/policies/PolicyPage/components/PolicyForm/_styles.scss
@@ -39,27 +39,115 @@
       scrollbar-width: none; /* Firefox */
     }
 
+    .edit-link {
+      cursor: pointer;
+    }
+
+    .name-description {
+      flex-grow: 1;
+      margin: $pad-medium 24px 0 0;
+      .policy-name-wrapper {
+        display: flex;
+        &:not(.query-form--editing) {
+          textarea:hover {
+            cursor: pointer;
+            color: $core-vibrant-blue;
+          }
+        }
+        .edit-icon {
+          position: relative;
+          left: 3px;
+          top: 13px;
+        }
+        .policy-form__policy-name,
+        .input-sizer::after {
+          font-size: $large;
+        }
+        .component__auto-size-input-field {
+          letter-spacing: -0.5px;
+          line-height: 2.3rem;
+          padding-top: 2px;
+        }
+      }
+      .policy-description-wrapper {
+        display: flex;
+        padding-top: $pad-small;
+        &:not(.query-form--editing) {
+          textarea:hover {
+            cursor: pointer;
+            color: $core-vibrant-blue;
+          }
+        }
+        .edit-icon {
+          position: relative;
+          left: 3px;
+          top: 0;
+        }
+      }
+      .edit-icon {
+        width: 14px;
+        height: 14px;
+        opacity: 1;
+        transition: opacity 0.2s;
+        &.hide {
+          opacity: 0;
+        }
+      }
+    }
+
     .name-description-resolve {
       flex-grow: 1;
-      margin-right: 24px;
-      .policy-form__policy-name {
-        margin: $pad-large 0;
-        line-height: 2rem;
-        height: 2rem;
+      margin: $pad-medium 24px 0 0;
+      .policy-name-wrapper {
+        display: flex;
+        &:not(.query-form--editing) {
+          textarea:hover {
+            cursor: pointer;
+            color: $core-vibrant-blue;
+          }
+        }
+        .edit-icon {
+          position: relative;
+          left: 3px;
+          top: 13px;
+        }
+        .policy-form__policy-name,
+        .input-sizer::after {
+          font-size: $large;
+        }
+        .component__auto-size-input-field {
+          letter-spacing: -0.5px;
+          line-height: 2.3rem;
+          padding-top: 2px;
+        }
+      }
+      .policy-description-wrapper {
+        display: flex;
+        padding-top: $pad-small;
+        &:not(.query-form--editing) {
+          textarea:hover {
+            cursor: pointer;
+            color: $core-vibrant-blue;
+          }
+        }
+        .edit-icon {
+          position: relative;
+          left: 3px;
+          top: 0;
+        }
+      }
+      .edit-icon {
+        width: 14px;
+        height: 14px;
+        opacity: 1;
+        transition: opacity 0.2s;
+        &.hide {
+          opacity: 0;
+        }
       }
       .policy-form__policy-resolve,
       .resolve-text-wrapper {
         margin-top: $pad-large;
-      }
-      #policy-description {
-        height: 38px;
-      }
-      textarea.policy-form__policy-description {
-        margin-top: 0.8125rem;
-      }
-      img {
-        height: 14px;
-        padding-left: $pad-small;
       }
     }
 
@@ -115,7 +203,6 @@
   }
 
   &__policy-name {
-    margin-top: $pad-large;
     font-size: $large;
 
     &.input-field--error {
