Add tags to standard query library and fleetdm.com/queries (#3970)
* handle query tags in build-static-content script, update query readme

* show tags in query library, add ability to filter by tags

* fix lint errors

* update mobile styles

* fix CTA link

* update mobile layout

* remove tag line-height and font size

* Update build-static-content.js

* Style update

* remove margin from selected tag, adjust OS logo placement

* requested changes from code review

Co-authored-by: Mike Thomas <mthomas@fleetdm.com>

--- a/website/assets/styles/pages/query-detail.less
+++ b/website/assets/styles/pages/query-detail.less
@@ -27,6 +27,14 @@
     border-color: #E2E4EA;
   }
 
+  [purpose='query-tag'] {
+    font-size: 12px;
+    font-weight: 700;
+    padding: 4px 8px;
+    border-radius: 20px;
+    background-color: #E2E4EA;
+  }
+
   [purpose='remediation'] {
     overflow-wrap: break-word;
     word-wrap: break-word;
