--- a/frontend/pages/Homepage/components/InfoCard/_styles.scss
+++ b/frontend/pages/Homepage/components/InfoCard/_styles.scss
@@ -37,6 +37,8 @@
       padding: 2px 4px;
       border-radius: 4px;
       margin-left: $pad-small;
+      position: relative;
+      top: -2px;
     }
   }
 
