--- a/website/views/pages/press-kit.ejs
+++ b/website/views/pages/press-kit.ejs
@@ -1,8 +1,9 @@
 <div id="press-kit" v-cloak>
   <div style="max-width: 900px;" class="container-fluid px-3 px-sm-5 py-0">
     <div class="text-center">
-      <h1>Fleet brand & press kit</h1>
+      <h1>Fleet brand resources</h1>
       <p>Download official Fleet logos, product screenshots, and wallpapers.</p>
+      <p>Visit the <a href="https://fleetdm.com/handbook/brand">Fleet handbook</a> for more information about brand guidelines or for a <a href="https://fleetdm.com/handbook/community#press-releases">press release boilerplate.</a></p>
     </div>
     <h2>Logo</h2>
     <p>Download the official Fleet logos.</p>
@@ -50,14 +51,6 @@
           </div>
         </div>
       </div>
-    </div>
-    <hr>
-    <div style="padding-bottom: 80px">
-      <h2 style="padding-bottom: 24px;">Press release boilerplate</h2>
-      <p>Fleet and osquery make it easy for big companies with bazillions of devices to manage all of their laptops and servers.  With any operating system (Linux, macOS, Windows).  In any environment (AWS, GCP, Jamf, Chef, Puppet, etc).</p>
-      <p>Fleet is open source software.  It's easy to get started quickly, easy to deploy, and it even comes with an enterprise-friendly free tier available under the MIT license.</p>
-      <p>IT and security teams love Fleet because of its flexibility and conventions.  Instead of secretly collecting as much data as possible, Fleet defaults to privacy and transparency, capturing only the data your organization actually needs to meet its compliance, security, and management goals, with clearly-defined, flexible limits.</p>
-      <p>That means better privacy.  Better device performance.  And better data, with less noise.</p>
     </div>
   </div>
 </div>
