--- a/frontend/pages/Homepage/cards/Munki/_styles.scss
+++ b/frontend/pages/Homepage/cards/Munki/_styles.scss
@@ -1,36 +1,18 @@
-.home-software {
+.home-munki {
   margin-top: $pad-large;
   position: relative;
 
-  .software-link {
-    img {
-      transform: rotate(-90deg);
-      height: 16px;
-      width: auto;
-      vertical-align: middle;
-    }
-  }
   .table-container {
     min-height: 435px;
   }
   .data-table__wrapper {
     overflow-x: auto;
   }
-  .form-field--dropdown {
-    margin: 0;
-  }
   .component__tabs-wrapper .table-container__header {
     display: none;
   }
-  &__software-modal {
-    width: 780px;
-
-    .data-table__wrapper {
-      margin-top: $pad-large;
-    }
-  }
-  &__empty-software {
-    margin: $pad-large auto 0;
+  &__empty-munki {
+    margin: $pad-medium auto 0;
 
     h1 {
       font-size: $small;
@@ -50,40 +32,6 @@
       font-size: $x-small;
       font-weight: $bold;
       text-decoration: none;
-    }
-  }
-  &__empty-software-modal {
-    width: 550px;
-    margin: $pad-large auto;
-  }
-  &__status_dropdown {
-    width: 219px;
-
-    .Select-menu-outer {
-      width: 364px;
-      max-height: 310px;
-
-      .Select-menu {
-        max-height: none;
-      }
-    }
-    .Select-value {
-      padding-left: $pad-medium;
-      padding-right: $pad-medium;
-
-      &::before {
-        display: inline-block;
-        position: absolute;
-        padding: 5px 0 0 0; // centers spin
-        content: url(../assets/images/icon-filter-black-16x16@2x.png);
-        transform: scale(0.5);
-        height: 26px;
-        left: 2px;
-      }
-    }
-    .Select-value-label {
-      padding-left: $pad-large;
-      font-size: $small !important;
     }
   }
   .data-table-container {
