moved card description implementation

--- a/frontend/pages/Homepage/components/InfoCard/_styles.scss
+++ b/frontend/pages/Homepage/components/InfoCard/_styles.scss
@@ -51,7 +51,7 @@
   &__section-description {
     font-size: $x-small;
 
-    .description-link {
+    a {
       font-size: $x-small;
       color: $core-vibrant-blue;
       font-weight: $bold;
