Add bottom padding to logos page

--- a/website/views/pages/press-kit.ejs
+++ b/website/views/pages/press-kit.ejs
@@ -1,5 +1,5 @@
 <div id="press-kit" v-cloak>
-  <div style="max-width: 900px;" class="container-fluid px-3 px-sm-5 py-0">
+  <div style="max-width: 900px; padding-bottom: 80px;" class="container-fluid px-3 px-sm-5">
     <div class="text-center">
       <h1>Fleet brand resources</h1>
       <p>Download official Fleet logos, product screenshots, and wallpapers.</p>
