--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -36,7 +36,6 @@
     max-width: 100%;
     filter: drop-shadow(0px 3.85401px 24.0876px rgba(0, 0, 0, 0.15));
     border-radius: 4.78295px;
-    margin-top: -15px;
   }
 
   [purpose='platform-content'] {
@@ -49,14 +48,20 @@
   [purpose='platform-section'] {
     padding-top: 100px;
   }
-
+  [purpose="platform-user-story-wrapper"]{
+    max-width: 900px;
+    max-height: 180px;
+    margin: auto;
+    filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
+    border-radius: 16px;
+    z-index: 1;
+  }
   [purpose='platform-user-story'] {
     margin-top: 80px;
     padding: 30px 24px;
-    max-height: 180px;
+    height: 180px;
     max-width: 900px;
     background-color: #192147;
-    filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
     border-radius: 16px;
     color: #F9FAFC;
     overflow: hidden;
@@ -67,21 +72,22 @@
     }
     svg {
       position: absolute;
-      left: -50px;
+      left: -10px;
       top: -30px;
       bottom: 0px;
       overflow: visible;
+      border-radius: 16px;
       vertical-align: middle;
-      z-index: -1;
-      width: 367px;
+      z-index: 0;
+      width: 100%;
       height: 180px;
     }
     img:not(a > img) {
-      position: absolute;
+      position: relative;
       display: inline;
       height: 120px;
       z-index: 1;
-      left: 60px;
+      left: 40px;
       bottom: 0;
     }
   }
@@ -138,10 +144,19 @@
 
   [purpose='platform-logos'] {
     padding-top: 24px;
+    .card {
+      height: 60px;
+      width: 80px;
+      min-width: 80px;
+      border: none;
+      background: #FFFFFF;
+      border-radius: 8px;
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+    }
     img {
-      height: 92px;
-      width: 112px;
-      display: inline;
+      width: auto;
+      max-height: 36px;
+      margin: auto;
     }
   }
 
@@ -225,25 +240,7 @@
           top: 0px;
         }
       }
-    }
-  }
 
-  @media (max-width: 767px) {
-
-    [purpose='platform-user-story'] {
-      max-height: 180px;
-      margin-top: 40px;
-      // padding: 31px 24px;
-      // max-height: 345px;
-      max-width: fit-content;
-      background-color: #192147;
-      filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
-      border-radius: 16px;
-      color: #F9FAFC;
-      overflow: hidden;
-      p {
-        margin-block-end: 4px;
-      }
     }
     [purpose='next-steps'] {
       .card {
@@ -251,13 +248,43 @@
         margin-bottom: 16px;
       }
     }
-
     [purpose='platform-feature-image'] {
-      padding-top: 60px;
+      max-width: 100%;
       margin-left: auto;
       margin-right: auto;
-      margin-top: -15px;
     }
+  }
+
+  @media (max-width: 767px) {
+
+    [purpose='platform-user-story'] {
+      max-height: 180px;
+      max-width: fit-content;
+      background-color: #192147;
+      border-radius: 16px;
+      color: #F9FAFC;
+      overflow: hidden;
+      svg {
+        position: absolute;
+        left: -10px;
+        top: -30px;
+        bottom: 0px;
+        overflow: visible;
+        border-radius: 16px;
+        vertical-align: middle;
+        z-index: 0;
+        height: 182px;
+      }
+      img:not(a > img) {
+        left: 15px;
+      }
+    }
+
+    [purpose='platform-feature-image'] {
+      max-width: 100%;
+      padding-top: 60px;
+    }
+
     [purpose='platform-content'] {
       padding-top: 80px;
       padding-left: 120px;
@@ -288,7 +315,7 @@
 
   }
 
-  @media (max-width: 576px) {
+  @media (max-width: 575px) {
     h1 {
       font-size: 28px;
       line-height: 54px;
@@ -324,28 +351,31 @@
         }
       }
     }
-
+    [purpose="platform-user-story-wrapper"]{
+      min-height: 375px;
+      max-width: 375px;
+      margin: auto;
+      filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
+      border-radius: 16px;
+      z-index: 1;
+    }
     [purpose='platform-user-story'] {
       margin-top: 40px;
       padding: 31px 24px;
+      height: unset;
       min-height: 375px;
-      max-width: 375px;
       background-color: #192147;
-      filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
       border-radius: 16px;
       color: #F9FAFC;
       overflow: hidden;
-      p {
-        margin-block-end: 16px;
-      }
       svg {
         position: absolute;
-        top: -20px;
-        left: 0px;
+        top: -32px;
+        left: -9px;
         overflow: visible;
         vertical-align: middle;
-        z-index: -1;
-        width: 100%;
+        z-index: 0;
+        width: 105%;
         height: auto;
       }
       img:not(a > img) {
@@ -360,11 +390,14 @@
       }
     }
     [purpose='platform-logos'] {
-      img {
-        height: auto;
-        width: 150px;
-        margin: -10px;
-        display: inline;
+      .card{
+        &.grow {
+          min-width: 108px;
+          min-height: 80px;
+          img {
+            max-height: 40px;
+          }
+        }
       }
     }
   }
