--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -2,8 +2,8 @@
 
   <div purpose="platform-banner-background">
     <div purpose="platform-banner" class="container-fluid">
-      <div style="max-width:1200px;" class="flex-row row mx-xl-auto justify-content-md-around justify-content-start">
-        <div purpose="platform-banner-text" class="col-md-6 px-0 col-12 flex-grow-1 text-center text-lg-left mx-xl-auto mx-lg-0 mx-auto">
+      <div style="max-width:1200px;" class="flex-row row mx-xl-auto justify-content-center justify-content-lg-start">
+        <div purpose="platform-banner-text" class="col-md-6 px-0 col-12 flex-grow-1 text-center text-lg-left mx-xl-auto mx-md-0 mx-auto">
           <h1>Developer-friendly IT</h1>
           <h4>One agent, any platform, up-to-the-minute data</h4>
           <p>Fleet allows you to harness the power of osquery to stream accurate, real-time data from all of your devices. It’s easy to deploy at scale, granular and open source.</p>
@@ -12,7 +12,7 @@
             <a style="color:#F9FAFC;" href="https://calendly.com/fleetdm/demo" target="_blank" class="btn col-md-6 col-12">Schedule a demo <img class="d-inline" alt="A small white arrow pointing to the right" src="/images/platform/icon-right-arrow-white-16x16@2x.png"></a>
           </div>
         </div>
-        <div class="col-xl-6 col-lg-5 col-12 flex-column pl-lg-4 px-0 px-sm-auto" purpose="platform-banner-hero">
+        <div class="col-xl-6 col-lg-4 col-12 flex-column pl-lg-3 px-0 px-sm-auto" purpose="platform-banner-hero">
           <img class="d-none d-lg-inline" alt="The Fleet instance and fleetctl command line tool" src="/images/platform/platform-hero-850x523@2x.png">
           <img class="d-inline d-lg-none" alt="The Fleet instance and fleetctl command line tool" src="/images/platform/platform-hero-660x430@2x.png">
         </div>
