--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -69,6 +69,7 @@
       color: #F9FAFC;
       font-weight: 700;
       text-decoration: none;
+      cursor: pointer;
     }
     svg {
       position: absolute;
@@ -399,6 +400,10 @@
           }
         }
       }
+    }
+    [purpose='next-steps'] {
+      padding-left: 15px;
+      padding-right: 15px;
     }
   }
   @media (max-width: 329px) {
