--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -26,7 +26,7 @@
   </div>
 
   <div purpose="platform-content" class="container-fluid">
-    <div  class="mx-auto">
+    <div class="mx-auto">
       <h2 class="text-md-center">Maintain secure laptops & servers</h2>
       <div purpose="platform-logos" class="row pb-2 justify-content-around">
         <div class="col-12 col-sm-6 justify-content-sm-end justify-content-center pb-3 d-flex pr-sm-0">
@@ -61,7 +61,7 @@
 
     <div purpose="platform-section">
       <div class="d-flex align-items-center flex-row row justify-content-around">
-        <div class="col-md-6 col-12 pr-lg-4">
+        <div class="col-md-6 col-12 pr-lg-1">
           <h2>Respond to incidents before they become emergencies</h2>
           <div purpose="platform-bullet-list">
             <p>Interpret incidents accurately and make decisions using real device data.</p>
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="col-md-6 col-12 px-0 pl-md-5 align-self-center">
-          <img purpose="platform-feature-image" alt="Easily detect and monitor vulnerable software" src="/images/platform/platform-feature-image-1-548x335@2x.png">
+          <img purpose="platform-feature-image" class="px-0 pl-md-2" alt="Easily detect and monitor vulnerable software" src="/images/platform/platform-feature-image-1-548x335@2x.png">
         </div>
       </div>
     </div>
@@ -110,7 +110,7 @@
     <div purpose="platform-section">
       <div class="d-flex align-items-center flex-row row justify-content-around">
         <div class="col-md-6 col-12 px-0 pr-md-5 order-last order-md-first align-self-center">
-          <img purpose="platform-feature-image" alt="See up-to-date information about devices" src="/images/platform/platform-feature-image-2-528x347@2x.png">
+          <img purpose="platform-feature-image" class="px-0 pr-md-2" alt="See up-to-date information about devices" src="/images/platform/platform-feature-image-2-528x347@2x.png">
         </div>
         <div class="col-md-6 col-12 pl-lg-4 px-0">
           <h2>Keep an accurate inventory of all your devices</h2>
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="col-md-6 col-12 px-0 pl-md-5 align-self-center">
-          <img purpose="platform-feature-image" alt="Set policies for for specific teams" src="/images/platform/platform-feature-image-3-548x326@2x.png">
+          <img purpose="platform-feature-image" class="pl-md-2 px-0" alt="Set policies for for specific teams" src="/images/platform/platform-feature-image-3-548x326@2x.png">
         </div>
       </div>
     </div>
