fix logo padding

--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -61,7 +61,7 @@
 
     <div purpose="platform-section">
       <div class="d-flex align-items-center flex-row row justify-content-around">
-        <div class="col-md-6 col-12 pr-lg-1">
+        <div class="col-md-6 col-12 pr-lg-4">
           <h2>Respond to incidents before they become emergencies</h2>
           <div purpose="platform-bullet-list">
             <p>Interpret incidents accurately and make decisions using real device data.</p>
@@ -81,26 +81,26 @@
       <div purpose="platform-bullet-list" class="text-md-center text-left">
         <p>Verify whether vulnerable software was actually patched / verify changes made with other systems</p>
       </div>
-      <div purpose="platform-logos" class="flex-row flex-wrap row justify-content-sm-center justify-content-around">
-        <div class="col-12 col-md-auto d-flex p-sm-0 justify-content-md-end justify-content-around mb-md-0 mb-4">
-          <div class="card mx-2">
+      <div purpose="platform-logos" class="flex-row flex-wrap row justify-content-center">
+        <div class="col-12 col-sm-auto d-flex p-sm-0 justify-content-sm-end justify-content-center mb-md-0 mb-4">
+          <div class="card mr-4">
             <img src="/images/platform/logo-tenable-36x36@2x.png" alt="Tenable">
           </div>
-          <div class="card mx-2">
+          <div class="card mr-4">
             <img src="/images/platform/logo-munki-60x36@2x.png" alt="Munki">
           </div>
-          <div class="card mx-2">
+          <div class="card mr-md-4">
             <img src="/images/platform/logo-jamf-36x36@2x.png" alt="Jamf">
           </div>
         </div>
-        <div class="col-12 col-md-auto d-flex p-sm-0 justify-content-md-start justify-content-around">
-          <div class="card mx-2">
+        <div class="col-12 col-sm-auto d-flex p-sm-0 justify-content-sm-start justify-content-center">
+          <div class="card mr-4">
             <img src="/images/platform/logo-kandji-49x36@2x.png" alt="Kandji">
           </div>
-          <div class="card mx-2 d-flex d-md-none">
+          <div class="card mr-4 d-flex d-md-none">
             <img src="/images/platform/icon-laptop-56x40@2x.png" alt="A laptop">
           </div>
-          <div class="card mx-2">
+          <div class="card">
             <img src="/images/platform/logo-simple-mdm-57x36@2x.png" alt="Simple MDM">
           </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="col-md-6 col-12 px-0 pr-md-5 order-last order-md-first align-self-center">
           <img purpose="platform-feature-image" class="px-0 pr-md-2" alt="See up-to-date information about devices" src="/images/platform/platform-feature-image-2-528x347@2x.png">
         </div>
-        <div class="col-md-6 col-12 pl-lg-4 px-0">
+        <div class="col-md-6 col-12 pl-lg-4">
           <h2>Keep an accurate inventory of all your devices</h2>
           <div purpose="platform-bullet-list">
             <p>Enroll macOS, Windows, and Linux laptops.</p>
@@ -128,7 +128,7 @@
 
     <div purpose="platform-section">
       <div class="d-flex align-items-center flex-row row justify-content-around">
-        <div class="col-md-6 col-12 pr-lg-4 px-0">
+        <div class="col-md-6 col-12 pr-lg-4">
           <h2>Meet compliance goals</h2>
           <div purpose="platform-bullet-list">
             <p>Verify compliance with accurate, up-to-the-minute data from actual devices.</p>
@@ -157,25 +157,25 @@
         </div>
       </div>
       <div purpose="platform-logos" class="flex-row row justify-content-md-center justify-content-around">
-        <div class="col-12 col-md-6 d-flex justify-content-md-end justify-content-around pr-md-0">
-          <div class="card mx-2">
+        <div class="col-12 col-md-6 d-flex justify-content-md-end justify-content-center pr-md-0 mb-4 mb-md-0">
+          <div class="card mr-4">
             <img src="/images/platform/logo-panther-40x40@2x.png" alt="Panther Labs">
           </div>
-          <div class="card mx-2 ">
+          <div class="card mr-4">
             <img src="/images/platform/logo-jamf-36x36@2x.png" alt="Jamf">
           </div>
-          <div class="card mx-2">
+          <div class="card mr-md-4">
             <img src="/images/platform/logo-splunk-40x40@2x.png" alt="Splunk">
           </div>
         </div>
-        <div class="col-12 col-md-6 d-flex justify-content-md-start justify-content-around pl-md-0">
-          <div class="card mx-2 mt-3 mt-md-0">
+        <div class="col-12 col-md-6 d-flex justify-content-md-start justify-content-center pl-md-0">
+          <div class="card mr-4">
             <img src="/images/platform/logo-kandji-49x36@2x.png" alt="Kandji">
           </div>
-          <div class="card mx-2 mt-3 mt-md-0">
+          <div class="card mr-4">
             <img src="/images/platform/logo-elastic-40x40@2x.png" alt="Elastic">
           </div>
-          <div class="card mx-2 mt-3 mt-md-0">
+          <div class="card">
             <img src="/images/platform/logo-snowflake-41x40@2x.png" alt="Snowflake">
           </div>
         </div>
