--- a/frontend/pages/Homepage/components/InfoCard/_styles.scss
+++ b/frontend/pages/Homepage/components/InfoCard/_styles.scss
@@ -37,6 +37,8 @@
       padding: 2px 4px;
       border-radius: 4px;
       margin-left: $pad-small;
+      position: relative;
+      top: -2px;
     }
   }
 
@@ -44,6 +46,21 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+  }
+
+  &__section-description {
+    font-size: $x-small;
+
+    a {
+      font-size: $x-small;
+      color: $core-vibrant-blue;
+      font-weight: $bold;
+      text-decoration: none !important;
+    }
+    img {
+      width: 12px;
+      margin-left: $pad-xsmall; 
+    }
   }
 
   &__action-button {
