replace schrodinger logo, add missing image, adjust svg width for safari

--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -185,7 +185,7 @@
       <div purpose="platform-user-story" class="mx-auto">
         <div class="flex-sm-row flex-column row justify-content-around justify-content-sm-between text-center text-sm-left">
           <div purpose="platform-user-story-logo" class="col-12 col-sm-4 pb-sm-0 pb-5 pr-md-5">
-            <img alt="Schrodinger logo" src="/images/platform/logo-schrodinger-120x120@2x.png">
+            <img alt="Schrodinger logo" src="/images/platform/logo-schrodinger-150x150@2x.png">
             <svg class="d-none d-sm-inline" viewBox="0 0 238 181" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="53.9834" cy="90.2871" r="183.5" fill="white"/>
             </svg>
@@ -193,7 +193,7 @@
             <circle cx="172.5" cy="-7.22607" r="183.5" fill="white"/>
             </svg>
           </div>
-          <div class="col-12 col-sm-8 flex-grow-1 justify-content-end align-self-sm-start align-self-end pt-sm-0 pl-md-4">
+          <div class="col-12 col-sm-8 flex-grow-1 justify-content-end align-self-sm-start align-self-end pt-sm-0 mt-3 pt-2 mt-sm-0 pl-md-4">
             <h3>Fleet user story</h3>
             <p>Jason Walton gives insight into how his team uses Fleet and osquery at Schrödinger.</p>
             <a href="https://blog.fleetdm.com/fleet-user-stories-200c94ca8a10" class="mt-3 mt-sm-0">Read more <img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
@@ -212,7 +212,7 @@
       </div>
     </div>
 
-    <div purpose="next-steps" class="row card-deck flex-lg-row flex-column">
+    <div purpose="next-steps" class="row card-deck flex-lg-row flex-column mx-auto">
       <div class="card card-body text-center">
         <img class="mx-auto" style="width: 40px; height: 40px; margin-bottom: 16px;" alt="Fleet logo" src="/images/platform/logo-fleet-brandmark-40x40@2x.png">
         <h3>Try Fleet</h3>
@@ -229,7 +229,7 @@
         <img class="mx-auto" style="width: 40px; height: 40px; margin-bottom: 16px;" alt="Slack logo" src="/images/logo-slack-24x24@2x.png">
         <h3>Join the community</h3>
         <p>Join the conversation or ask for help in our Slack channel.</p>
-        <a  href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank" class="mt-auto">Join on Slack<img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
+        <a href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank" class="mt-auto">Join on Slack<img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
       </div>
     </div>
   </div>
