--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -86,10 +86,10 @@
     img:not(a > img) {
       position: relative;
       display: inline;
-      height: 120px;
+      height: 100px;
       z-index: 1;
       left: 40px;
-      bottom: 0;
+      bottom: -10px;
     }
   }
 
@@ -376,18 +376,21 @@
         overflow: visible;
         vertical-align: middle;
         z-index: 0;
-        width: 105%;
+        width: calc(~"18px + 100%");
         height: auto;
       }
       img:not(a > img) {
         position: relative;
         display: inline;
-        height: 120px;
+        height: 100px;
         z-index: 1;
-        top: -20px;
+        top: 0px;
         left: 0px;
         margin-left: auto;
         margin-right: auto;
+      }
+      [purpose="platform-user-story-logo" ]{
+        padding-bottom: 24px;
       }
     }
     [purpose='platform-logos'] {
@@ -400,10 +403,6 @@
           }
         }
       }
-    }
-    [purpose='next-steps'] {
-      padding-left: 15px;
-      padding-right: 15px;
     }
   }
   @media (max-width: 329px) {
