--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -48,7 +48,7 @@
   [purpose='platform-section'] {
     padding-top: 100px;
   }
-  [purpose="platform-user-story-wrapper"]{
+  [purpose='platform-user-story-wrapper'] {
     max-width: 900px;
     max-height: 180px;
     margin: auto;
@@ -352,7 +352,7 @@
         }
       }
     }
-    [purpose="platform-user-story-wrapper"]{
+    [purpose='platform-user-story-wrapper'] {
       min-height: 375px;
       max-width: 375px;
       margin: auto;
@@ -376,7 +376,7 @@
         overflow: visible;
         vertical-align: middle;
         z-index: 0;
-        width: calc(~"18px + 100%");
+        width: calc(~'18px + 100%');
         height: auto;
       }
       img:not(a > img) {
@@ -389,12 +389,9 @@
         margin-left: auto;
         margin-right: auto;
       }
-      [purpose="platform-user-story-logo" ]{
-        padding-bottom: 24px;
-      }
     }
     [purpose='platform-logos'] {
-      .card{
+      .card {
         &.grow {
           min-width: 108px;
           min-height: 80px;
