--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -184,7 +184,7 @@
     <div purpose="platform-user-story-wrapper">
       <div purpose="platform-user-story" class="mx-auto">
         <div class="flex-sm-row flex-column row justify-content-around justify-content-sm-between text-center text-sm-left">
-          <div purpose="platform-user-story-logo" class="col-12 col-sm-4 pb-sm-0 pb-5 pr-md-5">
+          <div class="col-12 col-sm-4 pb-sm-0 pb-5 pr-md-5">
             <img alt="Schrodinger logo" src="/images/platform/logo-schrodinger-150x150@2x.png">
             <svg class="d-none d-sm-inline" viewBox="0 0 238 181" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="53.9834" cy="90.2871" r="183.5" fill="white"/>
