--- a/website/views/pages/platform.ejs
+++ b/website/views/pages/platform.ejs
@@ -83,21 +83,21 @@
       </div>
       <div purpose="platform-logos" class="flex-row flex-wrap row justify-content-center">
         <div class="col-12 col-sm-auto d-flex p-sm-0 justify-content-sm-end justify-content-center mb-md-0 mb-4">
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-tenable-36x36@2x.png" alt="Tenable">
           </div>
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-munki-60x36@2x.png" alt="Munki">
           </div>
-          <div class="card mr-md-4">
+          <div class="card mr-sm-4 mr-0">
             <img src="/images/platform/logo-jamf-36x36@2x.png" alt="Jamf">
           </div>
         </div>
         <div class="col-12 col-sm-auto d-flex p-sm-0 justify-content-sm-start justify-content-center">
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-kandji-49x36@2x.png" alt="Kandji">
           </div>
-          <div class="card">
+          <div class="card mr-sm-4 mr-0">
             <img src="/images/platform/logo-simple-mdm-57x36@2x.png" alt="Simple MDM">
           </div>
         </div>
@@ -155,10 +155,10 @@
       </div>
       <div purpose="platform-logos" class="flex-row row justify-content-md-center justify-content-around">
         <div class="col-12 col-md-6 d-flex justify-content-md-end justify-content-center pr-md-0 mb-4 mb-md-0">
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-panther-40x40@2x.png" alt="Panther Labs">
           </div>
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-jamf-36x36@2x.png" alt="Jamf">
           </div>
           <div class="card mr-md-4">
@@ -166,10 +166,10 @@
           </div>
         </div>
         <div class="col-12 col-md-6 d-flex justify-content-md-start justify-content-center pl-md-0">
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-kandji-49x36@2x.png" alt="Kandji">
           </div>
-          <div class="card mr-4">
+          <div class="card mr-sm-4 mr-2">
             <img src="/images/platform/logo-elastic-40x40@2x.png" alt="Elastic">
           </div>
           <div class="card">
@@ -189,11 +189,11 @@
             <svg class="d-none d-sm-inline" viewBox="0 0 238 181" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="53.9834" cy="90.2871" r="183.5" fill="white"/>
             </svg>
-            <svg class="d-inline d-sm-none" viewBox="0 0 345 177" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="d-block d-sm-none" viewBox="0 0 345 177" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="172.5" cy="-7.22607" r="183.5" fill="white"/>
             </svg>
           </div>
-          <div class="col-12 col-sm-8 flex-grow-1 justify-content-end align-self-sm-start align-self-end pt-sm-0 mt-3 pt-2 mt-sm-0 pl-md-4">
+          <div class="col-12 col-sm-8 flex-grow-1 justify-content-end align-self-sm-start align-self-end pt-sm-0 pt-4 mt-auto mt-sm-0 pl-md-4">
             <h3>Fleet user story</h3>
             <p>Jason Walton gives insight into how his team uses Fleet and osquery at Schrödinger.</p>
             <a href="https://blog.fleetdm.com/fleet-user-stories-200c94ca8a10" class="mt-3 mt-sm-0">Read more <img alt="A vibrant blue arrow pointing right" src="/images/platform/icon-right-arrow-vibrant-blue-16x16@2x.png"></a>
