Add details to software automation modal

--- a/frontend/pages/software/ManageSoftwarePage/components/ManageAutomationsModal/_styles.scss
+++ b/frontend/pages/software/ManageSoftwarePage/components/ManageAutomationsModal/_styles.scss
@@ -26,6 +26,12 @@
     color: $ui-error;
   }
 
+  &__software-automation-description {
+    p {
+      margin: $pad-large 0;
+    }
+  }
+
   .tooltip-wrap {
     display: flex;
     align-items: center;
