Add performace tooltip and undetermined tooltip

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -57,7 +57,7 @@
       img {
         width: 16px;
         height: 16px;
-        vertical-align: sub;
+        vertical-align: top;
       }
 
       // do not resize button icons inside headers
