Target header span only

--- a/frontend/pages/queries/ManageQueriesPage/components/QueriesListWrapper/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/components/QueriesListWrapper/_styles.scss
@@ -34,7 +34,7 @@
     color: $core-fleet-black;
   }
 
-  span {
+  .queries-table__performance-impact-header {
     margin-right: $pad-small;
   }
 
