--- a/frontend/components/GenerateInstallerModal/PlatformWrapper/_styles.scss
+++ b/frontend/components/GenerateInstallerModal/PlatformWrapper/_styles.scss
@@ -49,16 +49,16 @@
   }
 
   .input-field {
-    &--disabled {
-      letter-spacing: 0;
+    &__textarea {
+      min-height: 70px;
     }
 
-    &__textarea {
+    &__textarea,
+    &--disabled {
       font-family: "SourceCodePro", $monospace;
       font-weight: 600;
       font-size: 13px;
       color: $core-fleet-blue;
-      min-height: 70px;
       line-height: 20px;
       margin-bottom: 0;
       padding: $pad-medium $pad-large $pad-medium $pad-medium;
