--- a/website/assets/styles/pages/homepage.less
+++ b/website/assets/styles/pages/homepage.less
@@ -147,10 +147,10 @@
         outline: rgba(0, 0, 0, 0);
       }
     }
-    [purpose="demo-cta-form" ]{
+    [purpose='demo-cta-form' ] {
       position: relative;
     }
-    [purpose="demo-cta-error-message"]{
+    [purpose='demo-cta-error-message'] {
       position: absolute;
       left: 0;
       top: 52px;
