Fix copy positioning, fix generate-installer css class

--- a/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
+++ b/frontend/components/AddHostsModal/PlatformWrapper/_styles.scss
@@ -80,7 +80,7 @@
     display: block;
     align-items: center;
     position: absolute;
-    right: 0;
+    right: 15px;
     top: 40px;
 
     a {
